# Courses-Content

./: .gitignore  .pre-commit-config.yaml  AI-FEATURES-ROADMAP.md  AI-TOOLS-VERSION-UPDATE-2025.md  ASSESSMENT-FRAMEWORK.md  CAPABILITY-MATRIX.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSOLIDATION-STATUS.md  CONTRIBUTING.md  CORRECTION-NOTICE.md  COURSE-COMPLETION-ANALYSIS.md  COURSE-CONTENT-CREATION-GUIDE.md  COURSE-INVENTORY-REPORT.md  DOCUMENTATION-AUDIT-WEEK1-REPORT.md  DOCUMENTATION-AUDIT-WEEK2-REPORT.md  FINAL-REPORT.md  FPUNA-LANGUAGE-AUDIT.md  FUSION-SETUP-COMPLETE.md  GETTING-STARTED.md  HONEST-STATUS-REPORT.md  IMMEDIATE-ACTION-PLAN.md  IMPLEMENTATION-SUMMARY.md  IMPROVEMENTS-SUMMARY.md  INDEX.md  LICENSE  MARKETING_CRITICA_PROMPT_ONLY.md  MARKETING_TRACK_CRITICA.md  QA_AUTOMATION_ANALYSIS.md  QA_AUTOMATION_IMPLEMENTATION_PLAN.md  QA_AUTOMATION_PLAN_ESPANOL.md  README.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  REFERENCES.md  RESTRUCTURING-SUMMARY.md  SECURITY.md  SESSION_SUMMARY.md  STATUS.md  SUMMER-COURSES-AUDIT-REPORT.md  (+10 more)
.claude/: CLAUDE.md  EXTERNAL-REFERENCES.md  settings.local.json
.claude/hooks/: cometapi-fork-merging.py  context_bloat_detector.py  facebook-antidrift-recovery.py  performance-metrics-monitor.py
.claude/mcp/: CHEATSHEET.md  ECOSISTEMA_MCP_COMPLETO.md  README.md  brave-search.json  context7-docs.json  duckduckgo-search.json  env.template  fetch-server.json  git-server.json  github-advanced.json  jupyter-server.json  memory-server.json  notion-server.json  postgresql-server.json  puppeteer-server.json  qdrant-server.json  redis-server.json  sequential-thinking.json  slack-server.json  sqlite-server.json  time-server.json
.claude/rules/: README.md  architecture.yaml  code-quality.yaml  documentation.yaml  performance.yaml  security.yaml  testing.yaml
.specstory/history/: 2025-11-20_22-47Z-access-private-github-organization-repositories.md  2025-11-24_16-07Z-merge-repositories-into-courses-structure.md  2026-01-14_22-35Z-fpuna-summer-course-curriculum-development.md
AI-Assisted-Software-Development/: README.md
AI-Ethics-and-Governance/: README.md
AI-Tools-for-Productivity/: README.md
AI-for-Marketing-Teams/: README.md
AUDIT-REPORTS/: Aero-01-audit.md  Aero-02-audit.md  Aero-03-audit.md  Aero-04-audit.md  Aero-05-audit.md  COMPREHENSIVE-AUDIT-2026-01-23.md  Core-01-audit.md  Core-02-audit.md  Core-03-audit.md  Core-04-audit.md  Core-05-audit.md  Core-06-audit.md  DOCUMENTATION-AUDIT-WEEK3-REPORT.md  DOCUMENTATION-AUDIT-WEEK4-REPORT.md  FINAL-REPORT.md  INDEX.md  MID-POINT-REPORT.md  Marketing-02-audit.md  QA-02-audit.md  Research-02-audit.md  STATISTICS-DASHBOARD.md  Web-01-audit.md  Web-02-audit.md  Web-03-audit.md  Web-04-audit.md  Web-05-audit.md
Building-AI-Powered-Applications/: README.md
Introduction-to-AI-for-Business-Professionals/: SYLLABUS.md
Introduction-to-AI-for-Business-Professionals/presentation-templates/: MASTER-SLIDE-DECK-TEMPLATE.md
MentorMate-QA-Automation/: CURRICULUM.md  GETTING-STARTED.md
MentorMate-QA-Automation/ai-integration/: README.md
PROGRESS/: DAY-04-REPORT.md  DAY-05-REPORT.md  DAY-06-REPORT.md  DAY-07-REPORT.md  DAY-08-REPORT.md  README.md  daily-log.md
Prompt-Engineering-Masterclass/: README.md
QA-Automation-with-AI/: AI_QA_GUIDE.md  COURSE-QA-TO-AUTOMATION-WITH-AI.md  MOVED.md  README.md  SYLLABUS.md
QA-Automation-with-AI/assessments/: quiz-module-01.md  quiz-module-02.md  quiz-module-07.md
QA-Automation-with-AI/exercises/: exercise-06-unit-test-generation.md  exercise-08-agentic-patterns.md  exercise-09-cicd-integration.md
QA-Automation-with-AI/presentation-templates/: QUICK-START.md  README.md
QA-Automation-with-AI/resources/: AI-CAPABILITIES-ANALYSIS.md
TALLERES-VERANO-2026/: PREPARATION-CHECKLIST.md  README.md
TALLERES-VERANO-2026/DEMO_RESULTS/: README.md
TALLERES-VERANO-2026/exercises/: CLASS-01-exercise.md  README.md
TALLERES-VERANO-2026/presenter-notes/: FAQ-TROUBLESHOOTING.md  LIVE-DEMO-SCRIPTS.md  PRESENTER-GUIDE.md
TALLERES-VERANO-2026/resources/: EMAIL-TEMPLATES.md
TALLERES-VERANO-2026/slides/: CLASS-02-SLIDES.md
_compartido/: README.md  claude-beginner-configs-guide.md  claude-vs-gemini-comparison-2026.md  gemini-antigravity-research-2026.md
_compartido/00-KITS-DE-INICIO-IA/: README.md
_compartido/01-configuracion-herramientas/: README.md
_compartido/02-estandares-y-calidad/: .prettierrc
_compartido/04-utilidades-ia/: README.md  cometapi-thinking-controls.md  mcp-servers-paraguay.json  validate-mercosur-feeds.sh  zebbern-lifecycle-management.md
_compartido/student-copy-paste-configs/: README.md  basic-claude-starter.md  intermediate-setup.md
_shared/examples/: README.md
_shared/setup/: SETUP-PROMPTS.md  VIDEO-TUTORIALS.md
ai-tool-configs/: .gitignore  README.md
ai-tool-configs/claude/: .mcp.json  CLAUDE.md
ai-tool-configs/common/: sync-ai-context.sh
ai-tool-configs/configs/: README.md
ai-tool-configs/configs/python/: pyproject.toml  requirements.txt
archive/: README.md
certification/: CERTIFICATE-CODES.md  CERTIFICATION-GUIDELINES.md  CERTIFICATION-TEMPLATE.md  README.md
claude/: README.md  claude-best-configurations.md  claude-community-research-2026.md  claude-mcp-server-student-guide.md  claude-multi-agent-architectures.md
courses/: INDEX.md
cursor/: README.md
cursos/: INDEX.md
docs/: CI_CD_LOCAL.md  DOC-MAP.md  README.md
fpuna-research-track/: 02-research-methodology.md  04-academic-writing.md  05-presentation-publication.md  06-capstone-project.md
gemini/: README.md  gemini-cli-hooks-vs-claude.md  gemini-prompting-fundamentals.md  gemini-student-configs-guide.md
github-references/: README.md
metrics/: DASHBOARD-ARCHITECTURE.md  METRICS-REPORT.md  dashboard.html  generate_metrics.py
scripts/: README.md  audit-docs.py  check-links.py  find-redundancies.py  fix-diagrams-batch.py  install-cicd.sh  update-links.sh  update_ai_versions.py
shared/: README.md  VIDEO-TUTORIALS.md  ai-context-management-guide.md  antigravity-ide-analysis.md
shared-resources/: README.md
windsurf/: .windsurf-rules.md
(+1997 files in other folders)
